deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-majid
spec:
  selector:
    matchLabels:
      app: devops-test
  replicas: 1
  template:
    metadata:
      labels:
        app: devops-test
    spec:
      containers:
      containers:
      - name: devops-test
        image: majidbangash/elearning:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
